# yadro-task

./: CMakeLists.txt  README.md  desk.cpp  desk.h  events.cpp  events.h  globals.h  main.cpp  time.cpp  time.h  utils.cpp  utils.h
testdata/: testfile1.txt  testfile3.txt
tests_source/: test_main.cpp  tests.cpp
